[gd_scene load_steps=3 format=3 uid="uid://pxqrvonok1lr"]

[ext_resource type="Script" path="res://Projects/Garrison/garrison.gd" id="1_6xqpg"]
[ext_resource type="PackedScene" uid="uid://dbvg1wddl1i3g" path="res://Projects/Garrison/figure_card.tscn" id="2_f5xw8"]

[node name="Garrison" type="Control"]
layout_mode = 3
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 0
grow_vertical = 2
script = ExtResource("1_6xqpg")

[node name="FigureCards" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -450.0
offset_top = -1000.0
offset_right = -152.0
offset_bottom = 736.0
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/separation = 200

[node name="FigureCard" parent="FigureCards" instance=ExtResource("2_f5xw8")]
custom_minimum_size = Vector2(159, 173)
layout_mode = 2
type = 2

[node name="FigureCard2" parent="FigureCards" instance=ExtResource("2_f5xw8")]
custom_minimum_size = Vector2(159, 173)
layout_mode = 2
type = 4

[node name="FigureCard3" parent="FigureCards" instance=ExtResource("2_f5xw8")]
custom_minimum_size = Vector2(159, 173)
layout_mode = 2
type = 6

[node name="FigureCard4" parent="FigureCards" instance=ExtResource("2_f5xw8")]
custom_minimum_size = Vector2(159, 173)
layout_mode = 2
type = 3

[node name="FigureCard5" parent="FigureCards" instance=ExtResource("2_f5xw8")]
custom_minimum_size = Vector2(159, 173)
layout_mode = 2
type = 5

[node name="Eliminate_button" type="Button" parent="."]
layout_mode = 0
offset_left = -486.0
offset_top = 882.0
offset_right = -86.0
offset_bottom = 1032.0
theme_override_font_sizes/font_size = 58
disabled = true
text = "ELIMINATE"

[connection signal="selected" from="FigureCards/FigureCard" to="." method="_on_figure_card_selected"]
[connection signal="selected" from="FigureCards/FigureCard2" to="." method="_on_figure_card_selected"]
[connection signal="selected" from="FigureCards/FigureCard3" to="." method="_on_figure_card_selected"]
[connection signal="selected" from="FigureCards/FigureCard4" to="." method="_on_figure_card_selected"]
[connection signal="selected" from="FigureCards/FigureCard5" to="." method="_on_figure_card_selected"]
[connection signal="pressed" from="Eliminate_button" to="." method="_on_eliminate_button_pressed"]
